Style: Fix some dark mode styling

--- a/frontend/src/Components/BuyTicketModal/BuyTicketModal.module.scss
+++ b/frontend/src/Components/BuyTicketModal/BuyTicketModal.module.scss
@@ -59,6 +59,9 @@
   border: none;
   font-size: 1.5rem;
   cursor: pointer;
+  @include theme-dark {
+    color: $white;
+  }
 }
 
 .ticket_selection_container {
@@ -93,10 +96,13 @@
   float: right
 }
 .ticket_type {
-  background: #f0f0f0;
+  background-color: $grey-4;
   padding: 1rem;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
+  @include theme-dark {
+    background-color: $theme-dark-input-bg;
+  }
 }
 
 .ticket_type_fields {
@@ -124,11 +130,20 @@
   flex-direction: row;
 }
 
+.input_field {
+  @include theme-dark {
+    color: $black;
+  }
+}
+
 .total_price {
   font-size: 1.2rem;
   font-weight: 700;
   color: $black;
   margin-top: 1rem;
+  @include theme-dark {
+    color: $white;
+  }
 }
 
 .pay_button {
